@@ -1,3 +1,9 @@
+2008-03-17  Jason Merrill  <jason@redhat.com>
+
+	PR c++/35548
+	* call.c (reference_binding): Check LOOKUP_NO_TEMP_BIND when binding
+	a temp directly to a reference as per DR391.
+
 2008-03-12  Richard Guenther  <rguenther@suse.de>
 
 	PR c++/35469
